<resources>
    <string name="app_name">Eximeeting</string>
    <string name="start_screen_description">Exhibitions\nConferences\nMeetings</string>
    <string name="login_string">Login</string>
    <string name="register_string">Register</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="full_name_string">Full name</string>
    <string name="company_name_string">Company name</string>
    <string name="just_a_text">Just a text</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_out">Sign out</string>
    <string name="personal_information">Personal information</string>
    <string name="username_text">Username</string>
    <string name="company_name_text">Company name</string>
    <string name="appearance_text">Appearance</string>
    <string name="birth_date_string">Birth date</string>
    <string name="personal_information_string">Personal information</string>
    <string name="edit_name_string">Edit name</string>
    <string name="company_new_name_string">Company\nName</string>
    <string name="edit_company_string">Edit company name</string>
    <string name="update_information_string">Update information</string>
    <string name="application_info_string">Application Info</string>
    <string name="app_version">Version 1.01</string>
    <string name="old_npassword_string">Old\nPassword</string>
    <string name="old_password_string">Old password</string>
    <string name="new_npassword_string">New\nPassword</string>
    <string name="new_password_string">New password</string>
    <string name="visiting_card_string">Visiting card</string>
    <string name="business_card_string">Business card</string>
    <string name="user_full_name">User Full name</string>
    <string name="user_email">User Email</string>
    <string name="user_phone_number">User Phone number</string>
    <string name="user_position">User Position</string>
    <string name="user_website">User Website</string>
    <string name="business_nprogramme">Business\nProgramme</string>
    <string name="event_name">Event name</string>
    <string name="event_date">Event date</string>
    <string name="event_location">Event location</string>
    <string name="event_organizer">Event organizer</string>
    <string name="event_address">Event address</string>
    <string name="event_status">Event status</string>
    <string name="description">Description</string>
    <string name="description_text">Description text</string>
    <string name="speakers">Speakers</string>
    <string name="speakers_text">Speakers text</string>
    <string name="moderators">Moderators</string>
    <string name="moderators_text">Moderators text</string>
    <string name="business_programme">Business programme</string>
    <string name="click_to_view_the_business_programme">Click to view the business programme</string>
    <string name="event_name_recyclerview">Event name</string>
    <string name="event_date_recyclerview">Event date</string>
    <string name="event_location_recyclerview">Event location</string>
    <string name="event_status_recyclerview">Event Status</string>
    <string name="upcoming">Upcoming</string>
    <string name="completed">Completed</string>
    <string name="settings">Settings</string>
    <string name="password_reset">Password reset</string>
    <string name="you_haven_t_visited_any_event_yet">You haven\'t visited any event yet</string>
</resources>