<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/personal_green_background"
    android:padding="8dp"
    tools:context=".account_access.StartFragment">

    <ImageView
        android:id="@+id/profile_picture"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_gravity="bottom|center_horizontal"
        android:padding="16dp"
        android:alpha="0.3"
        android:scaleType="centerCrop"
        android:src="@mipmap/ic_launcher_round"
        app:layout_constraintBottom_toTopOf="@id/buttons_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/roundedImageViewRounded"
        app:strokeColor="@color/personal_green" />

    <TextView
        android:id="@+id/start_screen_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/app_name"
        android:textSize="48sp"
        
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.367" />

    <TextView
        android:id="@+id/start_screen_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        
        android:fontFamily="@font/roboto_regular"
        android:text="@string/start_screen_description"
        android:lineSpacingMultiplier="1.15"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_screen_app_name"
        app:layout_constraintVertical_bias="0.025" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/buttons_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="8dp">

        <com.google.android.material.button.MaterialButton
            android:background="@drawable/sign_out_button"
            android:id="@+id/login_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/login_string"
            android:textColor="#386a20"
            android:backgroundTint="#386a20"
            android:fontFamily="@font/roboto_regular"
            android:textSize="24sp"
            android:textAllCaps="false"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/register_button"
            app:layout_constraintHorizontal_chainStyle="spread" />

        <com.google.android.material.button.MaterialButton
            android:background="@drawable/sign_out_button"
            android:id="@+id/register_button"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/register_string"
            android:textAllCaps="false"
            android:backgroundTint="#d9e7cb"
            android:fontFamily="@font/roboto_regular"
            android:textSize="21sp"
            android:textColor="#386a20"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintLeft_toRightOf="@+id/login_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>