<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settings_container"
    android:background="@color/personal_green_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/inner_settings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/sign_out_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/profile_picture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/common_google_signin_btn_icon_dark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/username_text"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_picture" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="24dp"
            android:text="@string/company_name_text"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/personal_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/top_button"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            android:text="@string/personal_information"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/company_name" />

        <Button
            android:id="@+id/split_button_1"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/personal_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/appearance_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/middle_button"
            android:text="@string/appearance_text"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_button_1" />

        <Button
            android:id="@+id/split_button_2"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appearance_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/middle_button_2"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            android:background="@drawable/middle_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_button_2" />

        <Button
            android:id="@+id/split_button_3"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/white"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/middle_button_2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/bottom_button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:fontFamily="@font/roboto_regular"
            android:textSize="18sp"
            android:background="@drawable/bottom_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/split_button_3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_out_button"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/sign_out"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/roboto_regular"
        android:textSize="18sp"
        android:textColor="@color/personal_red"
        android:background="@drawable/sign_out_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread" />

</androidx.constraintlayout.widget.ConstraintLayout>